# fastapi-jules

./: AGENTS.md  README.md  main.py  pyproject.toml
app/: main.py
tests/: test_main.py
